# Firmwares

CH376_Uart/src/: ButtonPressed.h  ch376.cpp  ch376.h  imu.cpp  imu.h  main.cpp
IMU6050/: IMU2.cpp  IMU2.h
IMULator/: CMakeLists.txt  Resources.qrc  main.cpp  serialmonitor.cpp  serialmonitor.h  serialmonitor.ui  serialplotter.cpp  serialplotter.h  serialplotter.ui  simulator.cpp  simulator.h  simulator.ui  widget.cpp  widget.h  widget.ui
IMULator/Shaders/: ObjectVert.glsl  lightSourceFrag.glsl  lightSourceVert.glsl  objectFrag.glsl  skyFshader.glsl  skyVshader.glsl
IMULator/Styles/: DarkTheme.css  LightTheme.css
LSOE_Solver/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
SPVE_Code/: Python_Test_Code.code-workspace  platformio.ini
SPVE_Code/src/: DS3231.cpp  UI.cpp  ch376.cpp  ch376.h  hexbits.h  imu.cpp  imu.h  main.ino.mega.hex  main.ino.with_bootloader.mega.hex  workspace.code-workspace
Serial_Comm_Prj/: Serial_comm.ioc  Serial_comm.txt  Serial_comm_CM7.launch
Serial_Comm_Prj/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Serial_Comm_Prj/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
Serial_Comm_Prj/FLASH_Driver/: W25Q128.c  W25Q128.h  flash.h
Serial_Comm_Prj/UART_Driver/: serial.h  uart.c  uart.h
Serial_monitor/: CMakeLists.txt  Resources.qrc  main.cpp  serialmonitor.cpp  serialmonitor.h  serialmonitor.ui  widget.cpp  widget.h  widget.ui
Serial_monitor/Styles/: DarkTheme.css  LightTheme.css
TCA_testing/: platformio.ini
TCA_testing/src/: main.cpp
main/: TimerOne.cpp  UI.h  imu.cpp  main.cpp
